mdapi/Custom/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Amenities_Included__c</fullName>
        <label>Amenities Included?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amenities__c</fullName>
        <label>Amenities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basketball Court</fullName>
                </value>
                <value>
                    <fullName>Beach Access</fullName>
                </value>
                <value>
                    <fullName>Boat Ramp</fullName>
                </value>
                <value>
                    <fullName>Boat Slip</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Clubhouse</fullName>
                </value>
                <value>
                    <fullName>Dog Park</fullName>
                </value>
                <value>
                    <fullName>Dry Storage</fullName>
                </value>
                <value>
                    <fullName>Golf Course</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Jacuzzi</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Racquetball Court</fullName>
                </value>
                <value>
                    <fullName>Tennis Court</fullName>
                </value>
                <value>
                    <fullName>Tot Lot</fullName>
                </value>
                <value>
                    <fullName>Volleyball Court</fullName>
                </value>
                <value>
                    <fullName>Walking Trails</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amenity_Details__c</fullName>
        <label>Amenity Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Beneficiary_ABA__c</fullName>
        <label>Beneficiary ABA</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Account_Name__c</fullName>
        <label>Beneficiary Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Account_No__c</fullName>
        <label>Beneficiary Account No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank__c</fullName>
        <label>Beneficiary Bank</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <inlineHelpText>Company Email address</inlineHelpText>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Hours__c</fullName>
        <formula>24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gate_Code__c</fullName>
        <label>Gate Code</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gated__c</fullName>
        <label>Gated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HOA_Application_Fee__c</fullName>
        <label>HOA Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lawn_Maintenance_End_Service_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lawn Maintenance End Service Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Role__c</field>
                <operation>contains</operation>
                <value>Lawn Maintenance End Service Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Lawn Maintenance End Service Contact)</relationshipLabel>
        <relationshipName>LawnMaintenanceEndServiceAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Restrictions__c</fullName>
        <inlineHelpText>If there are any unique requirements or restrictions that need to be called out, please list here.</inlineHelpText>
        <label>Other Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pool_Maintenance_End_Service_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pool Maintenance End Service Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Role__c</field>
                <operation>contains</operation>
                <value>Pool Maintenance End Service Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Pool Maintenance End Service Contact)</relationshipLabel>
        <relationshipName>PoolMaintenanceEndServiceAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prohibits_Renters__c</fullName>
        <inlineHelpText>Please indicate if this community/HOA has strict by-laws that prohibit leasing or other restrictions that could impact our ability to lease this property.</inlineHelpText>
        <label>Prohibits Leasing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Grandfathered Restrictions</fullName>
                </value>
                <value>
                    <fullName>Some Restrictions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Mgmt_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please indicate if the HOA contracts with a property management company.</inlineHelpText>
        <label>Property Mgmt Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HOAs under Mgmt</relationshipLabel>
        <relationshipName>HOAs_under_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rehab_Crew_Intake_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rehab Crew Intake Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Role__c</field>
                <operation>contains</operation>
                <value>Rehab Crew Intake Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Rehab Crew Intake Contact)</relationshipLabel>
        <relationshipName>RehabCrewIntakeAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Amount__c</fullName>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Type__c</fullName>
        <label>Security Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refundable</fullName>
                </value>
                <value>
                    <fullName>Non-Refundable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_Policy__c</fullName>
        <label>Sign Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tenant_Aplication_Required__c</fullName>
        <label>Tenant Application Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Application_Notes__c</fullName>
        <label>Tenant Application Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>W9_on_file__c</fullName>
        <label>W9 on file</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_vendor_code__c</fullName>
        <label>Yardi Vendor Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>